Fix sidebar scrollbars

--- a/src/view.css
+++ b/src/view.css
@@ -165,8 +165,8 @@ button:hover {
 }
 
 .sidebar-content {
-    margin-left: 20px;
-    margin-right: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     overflow-y: auto;
     position: relative;
 }
